Used Collate tool

--- a/collated/docs/A0139621H.md
+++ b/collated/docs/A0139621H.md
@@ -1,5 +1,5 @@
 # A0139621H
-###### /UserGuide.md
+###### \UserGuide.md
 ``` md
 # Appendix A
 _This appendix lists down all the inputs of dates and times that are accepted when adding/editing a task._<br>
