--- a/collated/docs/A0147924X.md
+++ b/collated/docs/A0147924X.md
@@ -1,5 +1,5 @@
 # A0147924X
-###### /DeveloperGuide.md
+###### \DeveloperGuide.md
 ``` md
 ## Introduction
 
@@ -9,7 +9,7 @@ This guide describes how Task Ninja has been designed and implemented. It is dir
 
 
 ```
-###### /DeveloperGuide.md
+###### \DeveloperGuide.md
 ``` md
 ## Appendix A : User Stories
 
@@ -48,7 +48,7 @@ Likeliness | As (a)... | I want to... | So that I can...
 `U` | User | Receive emails/notifications about pressing deadlines | Be reminded to complete these tasks
 
 ```
-###### /UserGuide.md
+###### \UserGuide.md
 ``` md
 # User Guide
 
