--- a/collated/main/A0147924X.md
+++ b/collated/main/A0147924X.md
@@ -1,5 +1,5 @@
 # A0147924X
-###### /java/seedu/manager/commons/core/CommandWord.java
+###### \java\seedu\manager\commons\core\CommandWord.java
 ``` java
 /**
  * Represents a command in the task manager
@@ -26,14 +26,14 @@ public class CommandWord {
 	}
 }
 ```
-###### /java/seedu/manager/commons/core/Config.java
+###### \java\seedu\manager\commons\core\Config.java
 ``` java
     public Config() {
     	EventsCenter.getInstance().registerHandler(this);
     }
     
 ```
-###### /java/seedu/manager/commons/core/Config.java
+###### \java\seedu\manager\commons\core\Config.java
 ``` java
     @Subscribe
     public void handleStorageLocationChangedEvent(StorageLocationChangedEvent event) {
@@ -47,7 +47,7 @@ public class CommandWord {
     }
 }
 ```
-###### /java/seedu/manager/commons/events/logic/CommandWordsChangedEvent.java
+###### \java\seedu\manager\commons\events\logic\CommandWordsChangedEvent.java
 ``` java
 /**
  * Indicates that command words have changed
@@ -64,7 +64,7 @@ public class CommandWordsChangedEvent extends BaseEvent {
 
 }
 ```
-###### /java/seedu/manager/commons/events/storage/ConfigFilePathChangedEvent.java
+###### \java\seedu\manager\commons\events\storage\ConfigFilePathChangedEvent.java
 ``` java
 /**
  * Indicates that the TaskManager Storage location has changed in the Config
@@ -87,7 +87,7 @@ public class ConfigFilePathChangedEvent extends BaseEvent {
 	}
 }
 ```
-###### /java/seedu/manager/commons/events/storage/StorageLocationChangedEvent.java
+###### \java\seedu\manager\commons\events\storage\StorageLocationChangedEvent.java
 ``` java
 /**
  * Indicates that the storage location has changed
@@ -111,7 +111,7 @@ public class StorageLocationChangedEvent extends BaseEvent {
 	}
 }
 ```
-###### /java/seedu/manager/commons/events/storage/UserPrefsChangedEvent.java
+###### \java\seedu\manager\commons\events\storage\UserPrefsChangedEvent.java
 ``` java
 /**
  * Indicates that User Preferences have changed
@@ -136,7 +136,7 @@ public class UserPrefsChangedEvent extends BaseEvent {
 
 }
 ```
-###### /java/seedu/manager/commons/events/ui/JumpToTagListRequestEvent.java
+###### \java\seedu\manager\commons\events\ui\JumpToTagListRequestEvent.java
 ``` java
 /**
  * Indicates a request to jump to a certain tag
@@ -160,7 +160,7 @@ public class JumpToTagListRequestEvent extends BaseEvent {
     }
 }
 ```
-###### /java/seedu/manager/commons/events/ui/JumpToTaskListRequestEvent.java
+###### \java\seedu\manager\commons\events\ui\JumpToTaskListRequestEvent.java
 ``` java
 /**
  * Indicates a request to jump to the list of tasks
@@ -183,7 +183,7 @@ public class JumpToTaskListRequestEvent extends BaseEvent {
     }
 }
 ```
-###### /java/seedu/manager/logic/commands/AddCommand.java
+###### \java\seedu\manager\logic\commands\AddCommand.java
 ``` java
     /**
      * Convenience constructor using raw values.
@@ -200,7 +200,7 @@ public class JumpToTaskListRequestEvent extends BaseEvent {
     }
     
 ```
-###### /java/seedu/manager/logic/commands/AliasCommand.java
+###### \java\seedu\manager\logic\commands\AliasCommand.java
 ``` java
 /**
  * Allows user to alias commands
@@ -263,7 +263,7 @@ public class AliasCommand extends Command implements UndoableCommand {
 	}
 }
 ```
-###### /java/seedu/manager/logic/commands/Command.java
+###### \java\seedu\manager\logic\commands\Command.java
 ``` java
     /**
      * Jumps to the given task
@@ -276,8 +276,13 @@ public class AliasCommand extends Command implements UndoableCommand {
         EventsCenter.getInstance().post(new JumpToTaskListRequestEvent(taskIndex));
     }
     
+    
+    public Model getModel() {
+    	return model;
+    }
+    
 ```
-###### /java/seedu/manager/logic/commands/DoneCommand.java
+###### \java\seedu\manager\logic\commands\DoneCommand.java
 ``` java
 /**
  * Marks a task identified using it's last displayed index as done.
@@ -333,10 +338,8 @@ public class DoneCommand extends Command implements UndoableCommand {
 			return new CommandResult(e.getMessage());
 		}
     }
-    
-```
-###### /java/seedu/manager/logic/commands/DoneCommand.java
-``` java
+	
+	/**
 	 * Marks the done property of a task
 	 * @param taskToMark The task which should be marked
 	 * @param isDone Whether it should be marked as done or not done
@@ -349,9 +352,9 @@ public class DoneCommand extends Command implements UndoableCommand {
         propsToEdit.put(TaskProperties.DONE, Optional.of(done));
         return new Task(propsToEdit);
 	}
-}
+	
 ```
-###### /java/seedu/manager/logic/commands/EditCommand.java
+###### \java\seedu\manager\logic\commands\EditCommand.java
 ``` java
 /**
  * Allows tasks to be edited. Uses an index to extract the task to be edited and changes its
@@ -452,7 +455,7 @@ public class EditCommand extends Command implements UndoableCommand {
     }
     
 ```
-###### /java/seedu/manager/logic/commands/FindCommand.java
+###### \java\seedu\manager\logic\commands\FindCommand.java
 ``` java
     /**
      * If tag is present in the search properties, then raises an event requesting jump to that tag 
@@ -468,7 +471,7 @@ public class EditCommand extends Command implements UndoableCommand {
     }
 }
 ```
-###### /java/seedu/manager/logic/commands/HelpCommand.java
+###### \java\seedu\manager\logic\commands\HelpCommand.java
 ``` java
 /**
  * Format full help instructions for every command for display.
@@ -605,7 +608,7 @@ public class HelpCommand extends Command {
     }
 }
 ```
-###### /java/seedu/manager/logic/commands/SortCommand.java
+###### \java\seedu\manager\logic\commands\SortCommand.java
 ``` java
 /**
  * Allows user to sort the displayed tasks by priority
@@ -629,15 +632,9 @@ public class SortCommand extends Command implements UndoableCommand{
 		this.addUndo(this);
 		return new CommandResult(MESSAGE_SUCCESS);
 	}
-
-	@Override
-	public CommandResult undoIt() {
-		model.unSortSortedFilteredTaskList();
-	    return new CommandResult(UNDO_SUCCESS);
-	}
-}
+    
 ```
-###### /java/seedu/manager/logic/commands/StorageCommand.java
+###### \java\seedu\manager\logic\commands\StorageCommand.java
 ``` java
 /**
  * Allows user to change the storage location
@@ -719,7 +716,7 @@ public class StorageCommand extends Command {
 	}
 }
 ```
-###### /java/seedu/manager/logic/commands/UnSortCommand.java
+###### \java\seedu\manager\logic\commands\UnSortCommand.java
 ``` java
 /**
  * Allows user to unsort the displayed tasks, placing completed tasks at the bottom
@@ -751,7 +748,7 @@ public class UnSortCommand extends Command implements UndoableCommand {
 	}
 }
 ```
-###### /java/seedu/manager/logic/LogicManager.java
+###### \java\seedu\manager\logic\LogicManager.java
 ``` java
     public LogicManager(Model model, Storage storage) {
         this.model = model;
@@ -759,7 +756,7 @@ public class UnSortCommand extends Command implements UndoableCommand {
     }
     
 ```
-###### /java/seedu/manager/logic/LogicManager.java
+###### \java\seedu\manager\logic\LogicManager.java
 ``` java
     @Subscribe
     /**
@@ -771,7 +768,7 @@ public class UnSortCommand extends Command implements UndoableCommand {
     }
 }
 ```
-###### /java/seedu/manager/logic/parser/ExtensionParser.java
+###### \java\seedu\manager\logic\parser\ExtensionParser.java
 ``` java
 /**
  * Used to parse extensions in the user input
@@ -973,7 +970,7 @@ public class ExtensionParser {
     
     /**
 ```
-###### /java/seedu/manager/logic/parser/ExtensionParser.java
+###### \java\seedu\manager\logic\parser\ExtensionParser.java
 ``` java
     /**
      * Adds a property to the properties HashMap
@@ -988,7 +985,7 @@ public class ExtensionParser {
     }
     
 ```
-###### /java/seedu/manager/logic/parser/Parser.java
+###### \java\seedu\manager\logic\parser\Parser.java
 ``` java
 /**
  * Parses user input.
@@ -1133,7 +1130,7 @@ public class Parser {
     }
     
 ```
-###### /java/seedu/manager/logic/parser/Parser.java
+###### \java\seedu\manager\logic\parser\Parser.java
 ``` java
     /**
      * Parses arguments in the context of the done task command
@@ -1151,7 +1148,7 @@ public class Parser {
 	}
     
 ```
-###### /java/seedu/manager/logic/parser/Parser.java
+###### \java\seedu\manager\logic\parser\Parser.java
 ``` java
     /**
      * Parses arguments in the context of the alias command
@@ -1186,7 +1183,7 @@ public class Parser {
     }
 }
 ```
-###### /java/seedu/manager/model/Model.java
+###### \java\seedu\manager\model\Model.java
 ``` java
     /** Returns the Command words */
     HashMap<Commands, String> getCommandWords();
@@ -1195,7 +1192,7 @@ public class Parser {
     HashMap<Commands, String> getExtensionWords();
     
 ```
-###### /java/seedu/manager/model/Model.java
+###### \java\seedu\manager\model\Model.java
 ``` java
     /**
      * Gets the alias for a certain command from the user preferences
@@ -1216,7 +1213,7 @@ public class Parser {
     		String messageNoMatch, String messageAliasAlreadyTaken) throws IllegalValueException;
     
 ```
-###### /java/seedu/manager/model/Model.java
+###### \java\seedu\manager\model\Model.java
 ``` java
     /**
      * Get the index of a specified tag in the list currently being displayed
@@ -1226,7 +1223,7 @@ public class Parser {
     int getIndexOfTag(Tag tag);
     
 ```
-###### /java/seedu/manager/model/Model.java
+###### \java\seedu\manager\model\Model.java
 ``` java
     /** Sorts the sorted and filtered task list by a certain property */
     void sortSortedFilteredTaskListByProperty(TaskProperties property);
@@ -1242,7 +1239,7 @@ public class Parser {
     int getIndexOfTask(ReadOnlyTask task);
 }
 ```
-###### /java/seedu/manager/model/ModelManager.java
+###### \java\seedu\manager\model\ModelManager.java
 ``` java
      * Retrieves command words from the user preferences
      */
@@ -1259,7 +1256,7 @@ public class Parser {
     }
     
 ```
-###### /java/seedu/manager/model/ModelManager.java
+###### \java\seedu\manager\model\ModelManager.java
 ``` java
     @Override
     public String getAliasForCommand(Commands command) {
@@ -1287,7 +1284,7 @@ public class Parser {
     }
     
 ```
-###### /java/seedu/manager/model/ModelManager.java
+###### \java\seedu\manager\model\ModelManager.java
 ``` java
     @Override
     public void updateSortedFilteredTaskListToShowAll() {
@@ -1310,7 +1307,7 @@ public class Parser {
     }
 
 ```
-###### /java/seedu/manager/model/task/Desc.java
+###### \java\seedu\manager\model\task\Desc.java
 ``` java
     /**
      * Validates given desc.
@@ -1322,7 +1319,7 @@ public class Parser {
     }
 
 ```
-###### /java/seedu/manager/model/task/Desc.java
+###### \java\seedu\manager\model\task\Desc.java
 ``` java
     @Override
     public String getPrettyValue() {
@@ -1333,9 +1330,8 @@ public class Parser {
 		}
     }
     
-    /**
 ```
-###### /java/seedu/manager/model/task/Done.java
+###### \java\seedu\manager\model\task\Done.java
 ``` java
     /**
      * Validates given done indicator.
@@ -1351,14 +1347,8 @@ public class Parser {
         return value ? "Yes" : "No";
     }
     
-    @Override
-    public String getPrettyValue() {
-        return value ? "\u2713" : "";
-    }
-    
-    /**
 ```
-###### /java/seedu/manager/model/task/Done.java
+###### \java\seedu\manager\model\task\Done.java
 ``` java
     @Override
     public int compareTo(TaskProperty other) {
@@ -1374,7 +1364,7 @@ public class Parser {
     }
 }
 ```
-###### /java/seedu/manager/model/task/Priority.java
+###### \java\seedu\manager\model\task\Priority.java
 ``` java
     private static enum VALUES {
     	LOW("low"), MED("med"), HIGH("high");
@@ -1409,9 +1399,8 @@ public class Parser {
         return value.value;
     }
     
-    /**
 ```
-###### /java/seedu/manager/model/task/Priority.java
+###### \java\seedu\manager\model\task\Priority.java
 ``` java
     @Override
     public int compareTo(TaskProperty other) {
@@ -1427,7 +1416,7 @@ public class Parser {
     }
 }
 ```
-###### /java/seedu/manager/model/task/ReadOnlyTask.java
+###### \java\seedu\manager\model\task\ReadOnlyTask.java
 ``` java
     /**
      * Returns true if both have the same state. (interfaces cannot override .equals)
@@ -1443,10 +1432,9 @@ public class Parser {
         		&& other.getDone().equals(this.getDone()))
                 && other.getTag().equals(this.getTag());
     }
-
-    /**
+    
 ```
-###### /java/seedu/manager/model/task/ReadOnlyTask.java
+###### \java\seedu\manager\model\task\ReadOnlyTask.java
 ``` java
     /**
      * Formats the task as pretty text, meant to be displayed on the UI and in messages
@@ -1485,7 +1473,7 @@ public class Parser {
     public boolean matches(HashMap<TaskProperties, Optional<TaskProperty>> other);
 }
 ```
-###### /java/seedu/manager/model/task/Task.java
+###### \java\seedu\manager\model\task\Task.java
 ``` java
     /**
      * Build task from properties represented as Strings
@@ -1614,7 +1602,7 @@ public class Parser {
     }
 
 ```
-###### /java/seedu/manager/model/task/Task.java
+###### \java\seedu\manager\model\task\Task.java
 ``` java
     @Override
     public boolean matches(HashMap<TaskProperties, Optional<TaskProperty>> other) {
@@ -1676,7 +1664,7 @@ public class Parser {
     }
     
 ```
-###### /java/seedu/manager/model/task/TaskProperty.java
+###### \java\seedu\manager\model\task\TaskProperty.java
 ``` java
 /**
  * An interface representing a property of a task
@@ -1748,7 +1736,7 @@ public abstract class TaskProperty implements Comparable<TaskProperty> {
     }
     
 ```
-###### /java/seedu/manager/model/task/Time.java
+###### \java\seedu\manager\model\task\Time.java
 ``` java
 /**
  * Represents a tasks time 
@@ -1851,9 +1839,8 @@ public abstract class Time extends TaskProperty {
     	return groups.get(0);
     }
     
-    /**
 ```
-###### /java/seedu/manager/model/task/Venue.java
+###### \java\seedu\manager\model\task\Venue.java
 ``` java
     /**
      * Validates given venue.
@@ -1869,9 +1856,8 @@ public abstract class Time extends TaskProperty {
         return value;
     }
     
-    /**
 ```
-###### /java/seedu/manager/model/UserPrefs.java
+###### \java\seedu\manager\model\UserPrefs.java
 ``` java
     public UserPrefs(){
         this.setGuiSettings(500, 500, 0, 0);
@@ -1902,7 +1888,7 @@ public abstract class Time extends TaskProperty {
     }
     
 ```
-###### /java/seedu/manager/model/UserPrefs.java
+###### \java\seedu\manager\model\UserPrefs.java
 ``` java
     /**
      * Get the keywords representing primary commands
@@ -2027,7 +2013,7 @@ public abstract class Time extends TaskProperty {
     }
     
 ```
-###### /java/seedu/manager/storage/StorageManager.java
+###### \java\seedu\manager\storage\StorageManager.java
 ``` java
     @Subscribe
     /**
@@ -2040,7 +2026,7 @@ public abstract class Time extends TaskProperty {
     }
 
 ```
-###### /java/seedu/manager/storage/StorageManager.java
+###### \java\seedu\manager\storage\StorageManager.java
 ``` java
     @Subscribe
     /**
@@ -2053,7 +2039,7 @@ public abstract class Time extends TaskProperty {
     }
     
 ```
-###### /java/seedu/manager/ui/MainWindow.java
+###### \java\seedu\manager\ui\MainWindow.java
 ``` java
     /**
      * Gets the Tag List Panel
@@ -2070,7 +2056,7 @@ public abstract class Time extends TaskProperty {
     }
 }
 ```
-###### /java/seedu/manager/ui/TaskCard.java
+###### \java\seedu\manager\ui\TaskCard.java
 ``` java
     /**
      * Colour overdue bar red if task is overdue
@@ -2082,7 +2068,7 @@ public abstract class Time extends TaskProperty {
     }
     
 ```
-###### /java/seedu/manager/ui/UiManager.java
+###### \java\seedu\manager\ui\UiManager.java
 ``` java
     @Subscribe
     /**
@@ -2095,7 +2081,7 @@ public abstract class Time extends TaskProperty {
     }
     
 ```
-###### /java/seedu/manager/ui/UiManager.java
+###### \java\seedu\manager\ui\UiManager.java
 ``` java
     @Subscribe
     /**
@@ -2108,7 +2094,7 @@ public abstract class Time extends TaskProperty {
     }
 }
 ```
-###### /resources/view/TaskListCard.fxml
+###### \resources\view\TaskListCard.fxml
 ``` fxml
             <columnConstraints>
             	<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="10.0" maxWidth="10.0" />
