--- a/collated/main/A0148042M.md
+++ b/collated/main/A0148042M.md
@@ -1,5 +1,5 @@
 # A0148042M
-###### /java/seedu/manager/commons/events/ui/TagPanelSelectionChangedEvent.java
+###### \java\seedu\manager\commons\events\ui\TagPanelSelectionChangedEvent.java
 ``` java
  * Represents a selection change in the Tag List Panel
  */
@@ -22,7 +22,7 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
     }
 }
 ```
-###### /java/seedu/manager/logic/commands/AddCommand.java
+###### \java\seedu\manager\logic\commands\AddCommand.java
 ``` java
     @Override
     public CommandResult execute() {
@@ -43,14 +43,22 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
     }
     
 ```
-###### /java/seedu/manager/logic/Logic.java
+###### \java\seedu\manager\logic\Logic.java
 ``` java
     /** Returns the filtered list of tags */
     ObservableList<Tag> getSortedFilteredTagList();
     
 }
 ```
-###### /java/seedu/manager/logic/parser/ExtensionParser.java
+###### \java\seedu\manager\logic\LogicManager.java
+``` java
+    @Override
+    public ObservableList<Tag> getSortedFilteredTagList() {
+        return model.getSortedFilteredTagList();        
+    }
+    
+```
+###### \java\seedu\manager\logic\parser\ExtensionParser.java
 ``` java
      * Parses events and puts the times into the properties
      * Throw an exception if start time is after end time
@@ -69,7 +77,7 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
     }
     
 ```
-###### /java/seedu/manager/logic/parser/ExtensionParser.java
+###### \java\seedu\manager\logic\parser\ExtensionParser.java
 ``` java
     private void addToTagList(String arguments) throws IllegalValueException {
         boolean isContained = tagList.contains(new Tag(arguments));
@@ -79,20 +87,27 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
     }
 }
 ```
-###### /java/seedu/manager/model/Model.java
+###### \java\seedu\manager\model\Model.java
+``` java
+    /** Deletes the given tag. */
+    void deleteTag(Tag tag);
+    
+```
+###### \java\seedu\manager\model\Model.java
 ``` java
     /** Adds the given tag */
     void addTag(Tag tag);
     
 ```
-###### /java/seedu/manager/model/Model.java
+###### \java\seedu\manager\model\Model.java
 ``` java
     /** Returns the sorted and filtered tag list as an {@code UnmodifiableObservableList<Tag>} */
     UnmodifiableObservableList<Tag> getSortedFilteredTagList();
     
 ```
-###### /java/seedu/manager/model/ModelManager.java
+###### \java\seedu\manager\model\ModelManager.java
 ``` java
+    /**
      * Initializes a ModelManager with the given TaskManager
      * TaskManager and its variables should not be null
      */
@@ -117,7 +132,7 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
     }
     
 ```
-###### /java/seedu/manager/model/ModelManager.java
+###### \java\seedu\manager\model\ModelManager.java
 ``` java
     public ModelManager(ReadOnlyTaskManager initialData, UserPrefs userPrefs) {
         taskManager = new TaskManager(initialData);
@@ -131,7 +146,15 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
     }
     
 ```
-###### /java/seedu/manager/model/ModelManager.java
+###### \java\seedu\manager\model\ModelManager.java
+``` java
+    @Override
+    public synchronized void deleteTag(Tag tag) {
+        taskManager.removeTag(tag);
+    }
+    
+```
+###### \java\seedu\manager\model\ModelManager.java
 ``` java
     @Override
     public synchronized void addTag(Tag tag) {
@@ -141,11 +164,10 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
             e.printStackTrace();
         }
         updateFilteredTagListToShowAll();
-//        indicateTaskManagerChanged();
     }
     
 ```
-###### /java/seedu/manager/model/ModelManager.java
+###### \java\seedu\manager\model\ModelManager.java
 ``` java
     @Override
     public UnmodifiableObservableList<Tag> getSortedFilteredTagList() {
@@ -153,7 +175,7 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
     }
     
 ```
-###### /java/seedu/manager/model/ModelManager.java
+###### \java\seedu\manager\model\ModelManager.java
 ``` java
     public void updateFilteredTagListToShowAll() {
         filteredTags.setPredicate(null);
@@ -214,8 +236,26 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
     }
 }
 ```
-###### /java/seedu/manager/model/tag/UniqueTagList.java
+###### \java\seedu\manager\model\ReadOnlyTaskManager.java
 ``` java
+    UniqueTagList getUniqueTagList();
+    
+```
+###### \java\seedu\manager\model\ReadOnlyTaskManager.java
+``` java
+    List<Tag> getTagList();
+}
+```
+###### \java\seedu\manager\model\tag\UniqueTagList.java
+``` java
+/**
+ * A list of tags that enforces no nulls and uniqueness between its elements.
+ *
+ * Supports minimal set of list operations for the app's features.
+ *
+ * @see Tag#equals(Object)
+ * @see CollectionUtil#elementsAreUnique(Collection)
+ * 
  */
 public class UniqueTagList implements Iterable<Tag> {
 
@@ -310,6 +350,9 @@ public class UniqueTagList implements Iterable<Tag> {
         return internalList.contains(toCheck);
     }
     
+    /**
+     * Clear all the tags in the current tag list.
+     */
     public void clear() {
         this.internalList.clear();
     }
@@ -360,8 +403,9 @@ public class UniqueTagList implements Iterable<Tag> {
     }
 }
 ```
-###### /java/seedu/manager/model/task/Tag.java
+###### \java\seedu\manager\model\task\Tag.java
 ``` java
+/**
  * Represents a Tag in the task manager.
  * Guarantees: immutable; name is valid as declared in {@link #isValid(String, String)}
  */
@@ -371,9 +415,6 @@ public class Tag extends TaskProperty {
     public static final String TAG_VALIDATION_REGEX = ".+";
 
     public String tagName;
-
-//    public Tag() {
-//    }
 
     /**
      * Validates given tag name.
@@ -385,13 +426,9 @@ public class Tag extends TaskProperty {
         this.tagName = name;
     }
 
-    @Override
-    public boolean equals(Object other) {
-        return other == this // short circuit if same object
-                || (other instanceof Tag // instanceof handles nulls
-                && this.tagName.equals(((Tag) other).tagName)); // state check
-    }
-
+```
+###### \java\seedu\manager\model\task\Tag.java
+``` java
     @Override
     public int hashCode() {
         return tagName.hashCode();
@@ -403,13 +440,9 @@ public class Tag extends TaskProperty {
     public String toString() {
         return tagName;
     }
-    
-    public String toUiString() {
-        return " [" + tagName + "]";
-    }
 
 ```
-###### /java/seedu/manager/model/task/Task.java
+###### \java\seedu\manager\model\task\Task.java
 ``` java
     @Override
     public Optional<TaskProperty> getTag() {
@@ -417,28 +450,22 @@ public class Tag extends TaskProperty {
     }
     
 ```
-###### /java/seedu/manager/model/task/Time.java
+###### \java\seedu\manager\model\task\Time.java
 ``` java
+    /**
      * @return this property's time
      */
     public Date getTime() {
         return value;
     }
     
-    /**
 ```
-###### /java/seedu/manager/model/TaskManager.java
+###### \java\seedu\manager\model\TaskManager.java
 ``` java
     public ObservableList<Tag> getTags() {
         ObservableList<Tag> internalTagList = tags.getInternalList();
         ObservableList<Tag> tagListFromTaskList = getTagsFromTaskList(this.getTasks());
 
-//        try {
-//            tags.mergeFrom(new UniqueTagList(tagListFromTaskList));
-//        } catch (DuplicateTagException e) {
-//            e.printStackTrace();
-//        }
-        
         return combineTwoList(internalTagList, tagListFromTaskList);
     }
     
@@ -471,9 +498,27 @@ public class Tag extends TaskProperty {
         return tagList;
     }
 
+    public void setTasks(List<Task> tasks) {
+        this.tasks.getInternalList().setAll(tasks);
+    }
+
+    public void resetData(Collection<? extends ReadOnlyTask> newTasks)  {
+        setTasks(newTasks.stream().map(Task::new).collect(Collectors.toList()));
+    }
+    
+    public void clearTagList() {
+        tags.clear();
+    }
+
+    public void resetData(ReadOnlyTaskManager newData) {
+        resetData(newData.getTaskList());
+        clearTagList();
+    }
+    
 ```
-###### /java/seedu/manager/model/TaskManager.java
+###### \java\seedu\manager\model\TaskManager.java
 ``` java
+    /**
      * Add a tag to the task manager.
      *
      * @throws UniqueTagList.DuplicateTagException if an equivalent tag already exists.
@@ -481,104 +526,71 @@ public class Tag extends TaskProperty {
     public void addTag(Tag tag) throws UniqueTagList.DuplicateTagException {
         tags.add(tag);
     }
+
+    public boolean removeTask(ReadOnlyTask key) throws UniqueTaskList.TaskNotFoundException {
+        if (tasks.remove(key)) {
+            return true;
+        } else {
+            throw new UniqueTaskList.TaskNotFoundException();
+        }
+    }
+    
+    public void removeTag(Tag tag) {
+        int count = 0;
+        ObservableList<Task> taskList = tasks.getInternalList();
+        for(int i = 0;i < tasks.getSize();i++) {
+            if(taskList.get(i).getTag().isPresent()) {
+                if(((Tag) taskList.get(i).getTag().get()).equals(tag)) {
+                    count++;
+                }
+            }
+        }
+        
+        try {
+            if(count == 0) {
+                tags.remove(tag);
+            }
+        } catch (TagNotRemovedException e) {
+            e.printStackTrace();
+        }
+    }
     
 ```
-###### /java/seedu/manager/ui/MainWindow.java
+###### \java\seedu\manager\model\TaskManager.java
 ``` java
- * The Main Window. Provides the basic application layout containing
- * a menu bar and space where other JavaFX elements can be placed.
- */
-public class MainWindow extends UiPart {
+    @Override
+    public List<Tag> getTagList() {
+        return Collections.unmodifiableList(tags.getInternalList());
+    }
 
-    private static final String ICON = "/images/address_book_32.png";
-    private static final String FXML = "MainWindow.fxml";
-    public static final int MIN_HEIGHT = 600;
-    public static final int MIN_WIDTH = 450;
-
-    private Logic logic;
-
-    // Independent Ui parts residing in this Ui container
-    private TaskListPanel taskListPanel;
-    private TagListPanel tagListPanel;
-    private ResultDisplay resultDisplay;
-    private StatusBarFooter statusBarFooter;
-    private CommandBox commandBox;
-    private Config config;
-    private UserPrefs userPrefs;
-
-    // Handles to elements of this Ui container
-    private VBox rootLayout;
-    private Scene scene;
-
-    private String taskManagerName;
-
-    @FXML
-    private AnchorPane browserPlaceholder;
-
-    @FXML
-    private AnchorPane commandBoxPlaceholder;
-
-    @FXML
-    private MenuItem helpMenuItem;
-
-    @FXML
-    private AnchorPane taskListPanelPlaceholder;
+    @Override
+    public UniqueTaskList getUniqueTaskList() {
+        return this.tasks;
+    }
     
-    @FXML
-    private AnchorPane tagListPanelPlaceholder;
-
-    @FXML
-    private AnchorPane resultDisplayPlaceholder;
-
-    @FXML
-    private AnchorPane statusbarPlaceholder;
-
-
-    public MainWindow() {
-        super();
+    @Override
+    public UniqueTagList getUniqueTagList() {
+        return this.tags;
+    }
+```
+###### \java\seedu\manager\storage\XmlSerializableTaskManager.java
+``` java
+    /**
+     * These two methods are to get the UniqueTagList and the tag list directly.
+     */
+    @Override
+    public UniqueTagList getUniqueTagList() {
+        return null;
     }
 
     @Override
-    public void setNode(Node node) {
-        rootLayout = (VBox) node;
+    public List<Tag> getTagList() {
+        return null;
     }
-
-    @Override
-    public String getFxmlPath() {
-        return FXML;
-    }
-
-    public static MainWindow load(Stage primaryStage, Config config, UserPrefs prefs, Logic logic) {
-
-        MainWindow mainWindow = UiPartLoader.loadUiPart(primaryStage, new MainWindow());
-        mainWindow.configure(config.getAppTitle(), config.getTaskManagerName(), config, prefs, logic);
-        return mainWindow;
-    }
-
-    private void configure(String appTitle, String taskManagerName, Config config, UserPrefs prefs,
-                           Logic logic) {
-
-        //Set dependencies
-        this.logic = logic;
-        this.taskManagerName = taskManagerName;
-        this.config = config;
-        this.userPrefs = prefs;
-
-        //Configure the UI
-        setTitle(appTitle);
-        setIcon(ICON);
-        setWindowMinSize();
-        setWindowDefaultSize(prefs);
-        scene = new Scene(rootLayout);
-        primaryStage.setScene(scene);
-
-        setAccelerators();
-    }
-
-    private void setAccelerators() {
-        helpMenuItem.setAccelerator(KeyCombination.valueOf("F1"));
-    }
-
+}
+```
+###### \java\seedu\manager\ui\MainWindow.java
+``` java
     void fillInnerParts() {
         taskListPanel = TaskListPanel.load(primaryStage, getTaskListPlaceholder(), logic.getSortedFilteredTaskList());
         tagListPanel = TagListPanel.load(primaryStage, getTagListPlaceholder(), logic.getSortedFilteredTagList());
@@ -606,65 +618,12 @@ public class MainWindow extends UiPart {
     public AnchorPane getTagListPlaceholder() {
         return tagListPanelPlaceholder;
     }
-
-    public void hide() {
-        primaryStage.hide();
-    }
-
-    private void setTitle(String appTitle) {
-        primaryStage.setTitle(appTitle);
-    }
-
-    /**
-     * Sets the default size based on user preferences.
-     */
-    protected void setWindowDefaultSize(UserPrefs prefs) {
-        primaryStage.setHeight(prefs.getGuiSettings().getWindowHeight());
-        primaryStage.setWidth(prefs.getGuiSettings().getWindowWidth());
-        if (prefs.getGuiSettings().getWindowCoordinates() != null) {
-            primaryStage.setX(prefs.getGuiSettings().getWindowCoordinates().getX());
-            primaryStage.setY(prefs.getGuiSettings().getWindowCoordinates().getY());
-        }
-    }
-
-    private void setWindowMinSize() {
-        primaryStage.setMinHeight(MIN_HEIGHT);
-        primaryStage.setMinWidth(MIN_WIDTH);
-    }
-
-    /**
-     * Returns the current size and the position of the main Window.
-     */
-    public GuiSettings getCurrentGuiSetting() {
-        return new GuiSettings(primaryStage.getWidth(), primaryStage.getHeight(),
-                (int) primaryStage.getX(), (int) primaryStage.getY());
-    }
-
-    @FXML
-    public void handleHelp() {
-        HelpWindow helpWindow = HelpWindow.load(primaryStage);
-        helpWindow.show();
-    }
-
-    public void show() {
-        primaryStage.show();
-    }
-
-    /**
-     * Closes the application.
-     */
-    @FXML
-    private void handleExit() {
-        raise(new ExitAppRequestEvent());
-    }
-
-    public TaskListPanel getTaskListPanel() {
-        return this.taskListPanel;
-    }
     
 ```
-###### /java/seedu/manager/ui/TagCard.java
+###### \java\seedu\manager\ui\TagCard.java
 ``` java
+/**
+ * This TagCard will make UI shows a tag on the left side of task list
  */
 public class TagCard extends UiPart{
 
@@ -702,7 +661,6 @@ public class TagCard extends UiPart{
     @FXML
     public void initialize() {
         id.setText(displayedIndex + ". ");
-    // tag.setText(task.getTag().isPresent() ? task.getTag().get().getPrettyValue() : "");
         tag.setText(tagToLoad.getValue());
     }
 
@@ -721,7 +679,7 @@ public class TagCard extends UiPart{
     }
 }
 ```
-###### /java/seedu/manager/ui/TagListPanel.java
+###### \java\seedu\manager\ui\TagListPanel.java
 ``` java
  * Panel containing the list of tasks.
  */
@@ -813,7 +771,7 @@ public class TagListPanel extends UiPart {
 
 }
 ```
-###### /resources/view/DarkTheme.css
+###### \resources\view\DarkTheme.css
 ``` css
 .background {
     -fx-background-color: derive(#1d1d1d, 20%);
@@ -1104,7 +1062,7 @@ public class TagListPanel extends UiPart {
     -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
 }
 ```
-###### /resources/view/MainWindow.fxml
+###### \resources\view\MainWindow.fxml
 ``` fxml
 		<SplitPane id="splitPane" fx:id="splitPane"
 			dividerPositions="0.4" VBox.vgrow="ALWAYS">
@@ -1134,7 +1092,7 @@ public class TagListPanel extends UiPart {
 	</children>
 </VBox>
 ```
-###### /resources/view/TagListCard.fxml
+###### \resources\view\TagListCard.fxml
 ``` fxml
 <HBox id="tagCardPane" fx:id="tagCardPane" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
     <children>
@@ -1172,7 +1130,7 @@ public class TagListPanel extends UiPart {
     </children>
 </HBox>
 ```
-###### /resources/view/TagListPanel.fxml
+###### \resources\view\TagListPanel.fxml
 ``` fxml
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seedu.manager.ui.TagListPanel" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
     <stylesheets>
