--- a/collated/test/A0147924X.md
+++ b/collated/test/A0147924X.md
@@ -1,5 +1,5 @@
 # A0147924X
-###### /java/guitests/AddCommandTest.java
+###### \java\guitests\AddCommandTest.java
 ``` java
 public class AddCommandTest extends TaskManagerGuiTest {
 
@@ -51,7 +51,7 @@ public class AddCommandTest extends TaskManagerGuiTest {
 
 }
 ```
-###### /java/guitests/DoneCommandTest.java
+###### \java\guitests\DoneCommandTest.java
 ``` java
 public class DoneCommandTest extends TaskManagerGuiTest {
 
@@ -110,7 +110,7 @@ public class DoneCommandTest extends TaskManagerGuiTest {
     }
 }
 ```
-###### /java/guitests/EditCommandTest.java
+###### \java\guitests\EditCommandTest.java
 ``` java
 public class EditCommandTest extends TaskManagerGuiTest {
     @Test
@@ -169,7 +169,7 @@ public class EditCommandTest extends TaskManagerGuiTest {
     }
 }
 ```
-###### /java/guitests/SortCommandTest.java
+###### \java\guitests\SortCommandTest.java
 ``` java
 public class SortCommandTest extends TaskManagerGuiTest {
 	
@@ -220,7 +220,7 @@ public class SortCommandTest extends TaskManagerGuiTest {
 	}
 }
 ```
-###### /java/guitests/StorageCommandTest.java
+###### \java\guitests\StorageCommandTest.java
 ``` java
 public class StorageCommandTest extends TaskManagerGuiTest {
 	@Test
@@ -292,7 +292,7 @@ public class StorageCommandTest extends TaskManagerGuiTest {
 	}
 }
 ```
-###### /java/guitests/UnSortCommandTest.java
+###### \java\guitests\UnSortCommandTest.java
 ``` java
 public class UnSortCommandTest extends TaskManagerGuiTest {
 	
@@ -346,7 +346,7 @@ public class UnSortCommandTest extends TaskManagerGuiTest {
 	}
 }
 ```
-###### /java/seedu/manager/logic/LogicManagerTest.java
+###### \java\seedu\manager\logic\LogicManagerTest.java
 ``` java
     @Test
     public void execute_helpExtraArgs_errorMessageShown() throws Exception {
@@ -371,7 +371,7 @@ public class UnSortCommandTest extends TaskManagerGuiTest {
     }
     
 ```
-###### /java/seedu/manager/logic/LogicManagerTest.java
+###### \java\seedu\manager\logic\LogicManagerTest.java
 ``` java
     @Test
     public void execute_sort_successful() throws Exception {
@@ -714,7 +714,7 @@ public class UnSortCommandTest extends TaskManagerGuiTest {
     }
 
 ```
-###### /java/seedu/manager/logic/LogicManagerTest.java
+###### \java\seedu\manager\logic\LogicManagerTest.java
 ``` java
     @Test
     public void execute_findThenSort_successful() throws Exception {
@@ -742,7 +742,7 @@ public class UnSortCommandTest extends TaskManagerGuiTest {
     }
     
 ```
-###### /java/seedu/manager/logic/LogicManagerTest.java
+###### \java\seedu\manager\logic\LogicManagerTest.java
 ``` java
     @Test
     public void execute_findTag_successful() throws Exception {
@@ -769,7 +769,7 @@ public class UnSortCommandTest extends TaskManagerGuiTest {
     }
     
 ```
-###### /java/seedu/manager/logic/LogicManagerTest.java
+###### \java\seedu\manager\logic\LogicManagerTest.java
 ``` java
     @Test
     public void execute_alias_wrongNumberOfArgs() throws Exception {
@@ -925,10 +925,10 @@ public class UnSortCommandTest extends TaskManagerGuiTest {
         }
         
 ```
-###### /java/seedu/manager/logic/LogicManagerTest.java
+###### \java\seedu\manager\logic\LogicManagerTest.java
 ``` java
         /**
-         * Generates a Task object with given tag. Other fields will have some dummy values.
+         * Generates a Task object with given desc and tag. Other fields will have some dummy values.
          * @param desc Description for the task
          * @param tag Tag for the task
          * @return Task with the given parameters
@@ -948,7 +948,7 @@ public class UnSortCommandTest extends TaskManagerGuiTest {
     }
 }
 ```
-###### /java/seedu/manager/logic/parser/ExtensionParserTest.java
+###### \java\seedu\manager\logic\parser\ExtensionParserTest.java
 ``` java
 public class ExtensionParserTest {
     private ExtensionParser extensionParser;
@@ -1083,7 +1083,7 @@ public class ExtensionParserTest {
     }
 }
 ```
-###### /java/seedu/manager/model/TimeTest.java
+###### \java\seedu\manager\model\TimeTest.java
 ``` java
 public class TimeTest {
 	@Test
@@ -1211,7 +1211,7 @@ public class TimeTest {
 	}
 }
 ```
-###### /java/seedu/manager/testutil/TestTask.java
+###### \java\seedu\manager\testutil\TestTask.java
 ``` java
     public String getAddCommand() {
         StringBuilder sb = new StringBuilder();
@@ -1269,7 +1269,7 @@ public class TimeTest {
     }
 	
 ```
-###### /java/seedu/manager/testutil/TestUtil.java
+###### \java\seedu\manager\testutil\TestUtil.java
 ``` java
     /**
      * Inserts tasks into the array of tasks.
