--- a/collated/main/A0139621H.md
+++ b/collated/main/A0139621H.md
@@ -1,5 +1,5 @@
 # A0139621H
-###### /java/seedu/manager/logic/commands/FindCommand.java
+###### \java\seedu\manager\logic\commands\FindCommand.java
 ``` java
     @Override
     public CommandResult execute() {
@@ -57,9 +57,9 @@
     }
     
 ```
-###### /java/seedu/manager/logic/parser/Parser.java
+###### \java\seedu\manager\logic\parser\Parser.java
 ``` java
-     * 
+    /**
      * Parses arguments in the context of the find task command.
      * @param args full command args string
      * @return the prepared command
@@ -79,8 +79,9 @@
     }
     
 ```
-###### /java/seedu/manager/model/task/Desc.java
+###### \java\seedu\manager\model\task\Desc.java
 ``` java
+    /**
      * Checks if any words from the task's venue matches that with the search function's input words
      */
     @Override
@@ -97,8 +98,14 @@
     }
 
 ```
-###### /java/seedu/manager/model/task/Done.java
+###### \java\seedu\manager\model\task\Done.java
 ``` java
+    @Override
+    public String getPrettyValue() {
+        return value ? "\u2713" : "";
+    }
+    
+    /**
      * Checks if the task property matches with that of the search function's input
      */
     @Override
@@ -109,8 +116,9 @@
     }
 
 ```
-###### /java/seedu/manager/model/task/EndTime.java
+###### \java\seedu\manager\model\task\EndTime.java
 ``` java
+/**
  * Represents a Task's end time.
  * Guarantees: immutable; is valid as declared in {@link #isValid(String)}
  */
@@ -121,8 +129,9 @@ public class EndTime extends Time {
 	}
 }
 ```
-###### /java/seedu/manager/model/task/Priority.java
+###### \java\seedu\manager\model\task\Priority.java
 ``` java
+    /**
      * Checks if the task property matches with that of the search function's input
      */
     @Override
@@ -133,8 +142,9 @@ public class EndTime extends Time {
     }
     
 ```
-###### /java/seedu/manager/model/task/StartTime.java
+###### \java\seedu\manager\model\task\StartTime.java
 ``` java
+/**
  * Represents a Task's start time.
  * Guarantees: immutable; is valid as declared in {@link #isValid(String)}
  */
@@ -145,7 +155,7 @@ public class StartTime extends Time {
 	}
 }
 ```
-###### /java/seedu/manager/model/task/Tag.java
+###### \java\seedu\manager\model\task\Tag.java
 ``` java
     @Override
     public boolean matches(TaskProperty tag) {
@@ -156,7 +166,7 @@ public class StartTime extends Time {
 
 }
 ```
-###### /java/seedu/manager/model/task/Task.java
+###### \java\seedu\manager\model\task\Task.java
 ``` java
     @Override
     public Optional<TaskProperty> getPriority() {
@@ -179,13 +189,14 @@ public class StartTime extends Time {
     }
     
 ```
-###### /java/seedu/manager/model/task/TaskProperty.java
+###### \java\seedu\manager\model\task\TaskProperty.java
 ``` java
 	public abstract boolean matches(TaskProperty property);
 }
 ```
-###### /java/seedu/manager/model/task/Time.java
+###### \java\seedu\manager\model\task\Time.java
 ``` java
+    /**
      * Checks if the start time of a task is equal to or later than that of the search function's input
      */
 	@Override
@@ -199,17 +210,10 @@ public class StartTime extends Time {
 		}
     }
 
-	public boolean isBefore(Date now) {
-	
-		if (value.before(now)) {
-			return true;
-		}
-		return false;
-	}
-}
 ```
-###### /java/seedu/manager/model/task/Venue.java
+###### \java\seedu\manager\model\task\Venue.java
 ``` java
+    /**
      * Checks if any words from the task's venue matches that with the search function's input words
      */
     @Override
@@ -225,12 +229,4 @@ public class StartTime extends Time {
         return false;
     }
 
-    //@@ author
-    @Override
-    public boolean equals(Object other) {
-        return other == this // short circuit if same object
-                || (other instanceof Venue // instanceof handles nulls
-                && this.value.equals(((Venue) other).value)); // state check
-    }
-}
 ```
