--- a/collated/test/A0139621H.md
+++ b/collated/test/A0139621H.md
@@ -1,5 +1,5 @@
 # A0139621H
-###### /java/guitests/FindCommandTest.java
+###### \java\guitests\FindCommandTest.java
 ``` java
 public class FindCommandTest extends TaskManagerGuiTest {
 
@@ -51,4 +51,314 @@ public class FindCommandTest extends TaskManagerGuiTest {
         assertTrue(taskListPanel.isListMatching(expectedHits));
     }
 }
+```
+###### \java\seedu\manager\logic\LogicManagerTest.java
+``` java
+    @Test
+    public void execute_findVenue_successful() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task p1 = helper.generateTaskWithVenue("Arts");
+        Task p2 = helper.generateTaskWithVenue("Biz");
+        Task p3 = helper.generateTaskWithVenue("Com");
+        Task p4 = helper.generateTaskWithVenue("");
+        
+        List<Task> fourTasks = helper.generateTaskList(p3, p1, p4, p2);
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
+        helper.addToModel(model, fourTasks);
+        
+        
+        List<Task> expectedList = helper.generateTaskList(p3);
+        
+        assertCommandBehavior("find venue Com",
+                Command.getMessageForTaskListShownSummary(expectedList.size()),
+                expectedTM,
+                expectedList);
+    }
+    
+    @Test
+    public void execute_find_noTasksListed() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task p1 = helper.generateTaskWithVenue("Engin");
+        Task p2 = helper.generateTaskWithPriority("high");
+        Task p3 = helper.generateTaskWithEndTime("6pm");
+        Task p4 = helper.generateTaskWithStartTime("8am");
+        
+        List<Task> fourTasks = helper.generateTaskList(p3, p1, p4, p2);
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
+        helper.addToModel(model, fourTasks);
+        
+        
+        List<Task> expectedList = helper.generateTaskList();
+        
+        assertCommandBehavior("find venue Com",
+                Command.getMessageForTaskListShownSummary(expectedList.size()),
+                expectedTM,
+                expectedList);
+    }
+    
+    @Test
+    public void execute_find_invalidExtension() throws Exception {
+        assertCommandBehavior("find priority abc", Priority.MESSAGE_PRIORITY_CONSTRAINTS);
+    }
+    
+```
+###### \java\seedu\manager\logic\LogicManagerTest.java
+``` java
+    @Test
+    public void execute_findStartTime_successful() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task p1 = helper.generateTaskWithStartTime("2.30pm");
+        Task p2 = helper.generateTaskWithStartTime("11.30am");
+        Task p3 = helper.generateTaskWithStartTime("12.45pm");
+        Task p4 = helper.generateTaskWithStartTime("8am");
+        
+        List<Task> fourTasks = helper.generateTaskList(p3, p1, p4, p2);
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
+        helper.addToModel(model, fourTasks);
+        
+        
+        List<Task> expectedList = helper.generateTaskList(p1);
+        
+        assertCommandBehavior("find at 2pm",
+                Command.getMessageForTaskListShownSummary(expectedList.size()),
+                expectedTM,
+                expectedList);
+    }
+
+    @Test
+    public void execute_findEndTime_successful() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task p1 = helper.generateTaskWithEndTime("3.30pm");
+        Task p2 = helper.generateTaskWithEndTime("10.30am");
+        Task p3 = helper.generateTaskWithEndTime("1.45pm");
+        Task p4 = helper.generateTaskWithEndTime("8pm");
+        
+        List<Task> fourTasks = helper.generateTaskList(p2, p3, p1, p4);
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
+        helper.addToModel(model, fourTasks);
+        
+        
+        List<Task> expectedList = helper.generateTaskList(p2, p3, p1);
+        
+        assertCommandBehavior("find by 4pm",
+                Command.getMessageForTaskListShownSummary(expectedList.size()),
+                expectedTM,
+                expectedList);
+    }
+    
+    @Test
+    public void execute_findStartAndEndTime_successful() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task p1 = helper.generateTaskWithStartAndEndTime("5.15pm", "6.15pm");
+        Task p2 = helper.generateTaskWithStartAndEndTime("7.30am", "10.45am");
+        Task p3 = helper.generateTaskWithStartAndEndTime("1.55pm", "3pm");
+        Task p4 = helper.generateTaskWithStartAndEndTime("9.30pm", "10.45pm");
+        
+        List<Task> fourTasks = helper.generateTaskList(p2, p1, p4, p3);
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
+        helper.addToModel(model, fourTasks);
+        
+        
+        List<Task> expectedList = helper.generateTaskList(p4);
+        
+        assertCommandBehavior("find from 9pm to 11pm",
+                Command.getMessageForTaskListShownSummary(expectedList.size()),
+                expectedTM,
+                expectedList);
+    }
+    
+    @Test
+    public void execute_findDescAndVenue_successful() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task p1 = helper.generateTaskWithDescAndVenue("girl", "uptown");
+        Task p2 = helper.generateTaskWithDescAndVenue("my love", "an empty street");
+        Task p3 = helper.generateTaskWithDescAndVenue("funk", "uptown");
+        Task p4 = helper.generateTaskWithDescAndVenue("Road trip", "Genting Highlands");
+        
+        List<Task> fourTasks = helper.generateTaskList(p2, p4, p1, p3);
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
+        helper.addToModel(model, fourTasks);
+        
+        
+        List<Task> expectedList = helper.generateTaskList(p4);
+        
+        assertCommandBehavior("find Road venue Genting",
+                Command.getMessageForTaskListShownSummary(expectedList.size()),
+                expectedTM,
+                expectedList);
+    }
+    
+    @Test
+    public void execute_findVenueThenDesc_successful() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task p1 = helper.generateTaskWithDescAndVenue("girl", "uptown");
+        Task p2 = helper.generateTaskWithDescAndVenue("my love", "an empty street");
+        Task p3 = helper.generateTaskWithDescAndVenue("funk", "uptown");
+        Task p4 = helper.generateTaskWithDescAndVenue("Road trip", "Genting Highlands");
+        
+        List<Task> fourTasks = helper.generateTaskList(p2, p4, p1, p3);
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
+        helper.addToModel(model, fourTasks);
+        
+        
+        List<Task> expectedList = helper.generateTaskList(p1, p3);
+        
+        assertCommandBehavior("find venue uptown",
+                Command.getMessageForTaskListShownSummary(expectedList.size()),
+                expectedTM,
+                expectedList);
+    }
+    
+    @Test
+    public void execute_findPriority_successful() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task p1 = helper.generateTaskWithPriority("low");
+        Task p2 = helper.generateTaskWithPriority("med");
+        Task p3 = helper.generateTaskWithPriority("high");
+        Task p4 = helper.generateTaskWithPriority("");
+        
+        List<Task> fourTasks = helper.generateTaskList(p1, p2, p3, p4);
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
+        helper.addToModel(model, fourTasks);
+        
+        
+        List<Task> expectedList = helper.generateTaskList(p3);
+        
+        assertCommandBehavior("find priority high",
+                Command.getMessageForTaskListShownSummary(expectedList.size()),
+                expectedTM,
+                expectedList);
+    }
+    
+```
+###### \java\seedu\manager\logic\LogicManagerTest.java
+``` java
+        /**
+         * Generates a Task object with given desc. Other fields will have some dummy values.
+         * @param desc Description for the task
+         * @return Task with the given parameters
+         * @throws Exception
+         */
+        Task generateTaskWithDesc(String desc) throws Exception {
+            return new Task(
+                    desc,
+                    "Some Venue",
+                    "low",
+                    "7:30pm",
+                    "8:30pm",
+                    "",
+                    ""
+            );
+        }
+        
+        /**
+         * Generates a Task object with given venue. Other fields will have some dummy values.
+         * @param venue Venue for the task
+         * @return Task with the given parameters
+         * @throws Exception
+         */
+        Task generateTaskWithVenue(String venue) throws Exception {
+            return new Task(
+                    "boo",
+                    venue,
+                    "med",
+                    "10pm",
+                    "11pm",
+                    "",
+                    ""
+            );
+        }
+        
+        /**
+         * Generates a Task object with given priority. Other fields will have some dummy values.
+         * @param priority Priority for the task
+         * @return Task with the given parameters
+         * @throws Exception
+         */
+        Task generateTaskWithPriority(String priority) throws Exception {
+            return new Task(
+                    "hello it's me",
+                    "somewhere over the rainbow",
+                    priority,
+                    "10am",
+                    "12pm",
+                    "",
+                    ""
+            );
+        }
+        
+        /**
+         * Generates a Task object with given start time. Other fields will have some dummy values.
+         * @param startTime Start time for the task
+         * @return Task with the given parameters
+         * @throws Exception
+         */
+        Task generateTaskWithStartTime(String startTime) throws Exception {
+            return new Task(
+                    "hello",
+                    "from the other side",
+                    "high",
+                    startTime,
+                    "3pm",
+                    "",
+                    ""
+            );
+        }
+        
+        /**
+         * Generates a Task object with given end time. Other fields will have some dummy values.
+         * @param endTime End time for the task
+         * @return Task with the given parameters
+         * @throws Exception
+         */
+        Task generateTaskWithEndTime(String endTime) throws Exception {
+            return new Task(
+                    "don't let me down",
+                    "chainsmokers",
+                    "low",
+                    "9am",
+                    endTime,
+                    "",
+                    ""
+            );
+        }
+        
+        /**
+         * Generates a Task object with given start and end time. Other fields will have some dummy values.
+         * @param startTime Start time for the task
+         * @param endTime End time for the task
+         * @return Task with the given parameters
+         * @throws Exception
+         */
+        Task generateTaskWithStartAndEndTime(String startTime, String endTime) throws Exception {
+            return new Task(
+                    "falling down",
+                    "london bridge",
+                    "high",
+                    startTime,
+                    endTime,
+                    "",
+                    ""
+            );
+        }
+        
+        /**
+         * Generates a Task object with given desc and venue. Other fields will have some dummy values.
+         * @param desc Description for the task
+         * @param venue Venue for the task
+         * @return Task with the given parameters
+         * @throws Exception
+         */
+        Task generateTaskWithDescAndVenue(String desc, String venue) throws Exception {
+            return new Task(
+                    desc,
+                    venue,
+                    "med",
+                    "4.30am",
+                    "7am",
+                    "",
+                    ""
+            );
+        }
+        
 ```
